--- a/config-singer-client-dev.properties
+++ b/config-singer-client-dev.properties
@@ -1,4 +1,4 @@
 spring.mail.host=smtp.qq.com
-spring.mail.username=abcd@qq.com
+spring.mail.username=400887766@qq.com
 spring.mail.password=fjxbpvzlcmbcbfig
 spring.mail.default-encoding=UTF-8
